<resources>
    <string name="app_name">TAMPILAN UTAMA</string>
    //tampilan pertama
    <string name="usrnm">Username</string>
    <string name="pwsd">Password</string>
    <string name="login">Login</string>
    <string name="login_FB">Connect with Facebook</string>
    <string name="reg">Doesn\'t have account?<b> Register</b></string>

    //tampilan kedua
    <string name="email">Email</string>
    <string name="tlpn">Phone Number</string>
    <string name="gender1">Male</string>
    <string name="gender2">Female</string>
    <string name="repasword">Retype Password</string>
    <string name="perso">Personal</string>
    <string name="orga">Organization</string>
    <string name="Home">Home Address</string>
    <string name="oc">Default Location</string>
    <string name="agree">Agree with Term and Conditions</string>
    <string name="Regis">Register</string>

    //tampilan ketiga
    <string name="almos">Almost There</string>
    <string name="parag2">Thank you for registering with us. One more step, you need to check your email to active your account</string>
    <string name="Verif">Verify</string>

    //tampilan keempat
    <string name="pertama">Verify your account</string>
    <string name="kedua">We have send verification code to your email</string>
    <string name="ketiga">enter verification code here..</string>
    <string name="keempat">SEND</string>
    <string name="kelima">Doesn\'t get the code?<b> Resend</b></string>
    
    //tampilan kelima
    <string name="angkagive">75</string>
    <string name="give">BLOOD GIVE</string>
    <string name="angkarecieve">100</string>
    <string name="recieve">BLOOD RECEIVED</string>
    <string name="angkathanks">330</string>
    <string name="thanks">THANKS</string>
    <string name="kata1">Searchh Donor</string>
    <string name="kata2">Blood Needed</string>
    <string name="kata3">Message</string>
    <string name="kata4">Donor History</string>
    <string name="subkata1">Search donor near you</string>
    <string name="subkata2">4 User need blood</string>
    <string name="subkata3">5 New Messages</string>
    <string name="subkata4">5 Gives 2 Recieved</string>
</resources>
